Add proper JSON log

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Petr Šťastný <petr.stastny@second-foundation.eu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
+orjson = "^3.9.7"
 
 
 [build-system]
